--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
   <section class="about" id="about">
     <h2>Why serenity ?</h2>
     <p>
-      MoodTracker helps you log your feelings every day with just a tap. Understand your emotions over time,
+      Serenity helps you log your feelings every day with just a tap. Understand your emotions over time,
       identify triggers, and build healthy habits that support your well-being. Whether you're managing stress,
-      anxiety, or just want to stay in touch with yourself, MoodTracker makes mental wellness simple and effective.
+      anxiety, or just want to stay in touch with yourself, Serenity makes mental wellness simple and effective.
     </p>
   </section>
 
@@ -270,12 +270,12 @@
       <div>
         <img src="phone.jpg" alt="Phone Icon">
         <h3>Phone</h3>
-        <p>+91 3784567890</p>
+        <p>+916201987640</p>
       </div>
       <div>
         <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email Icon">
         <h3>Email</h3>
-        <p>support@moodtracker.com</p>
+        <p>support@serenity.com</p>
       </div>
       <div>
         <img src="loc.jpg" alt="Location Icon">
