--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MoodTracker</title>
+  <title>Serenity</title>
   <style>
     * {
       margin: 0;
@@ -248,7 +248,7 @@
       <button class="get-started-btn" onclick="document.getElementById('auth-section').scrollIntoView()">Get Started</button>
     </div>
     <div class="hero-image">
-      <img src="logo.jpg" alt="Mood Tracking">
+      <img src="Picture1.jpg" alt="Serenity">
     </div>
   </section>
 
