--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <button class="get-started-btn" onclick="document.getElementById('auth-section').scrollIntoView()">Get Started</button>
     </div>
     <div class="hero-image">
-      <img src="Picture1.jpg" alt="Serenity">
+      <img src="Picture1.png" alt="Serenity">
     </div>
   </section>
 
